--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,18 @@ platform = atmelavr
 board = pro8MHzatmega328
 framework = arduino
 
-lib_deps_builtin =
-    SPI
-    Wire
+; library dependencies
+;
+; I used the RTCLibExtended library as modified by Fabio Cuomo
+; and wound up forking the github repo and including that fork
+; in 'lib/' here as a submodule. Hence, RTCLibExtended is not
+; listed as a dependency.
+;
+; LowPower - Low-Power_ID38 - platformio lib install 38
+; RadioHead - RadioHead_ID124 - ... install 124
+; SeeSaw - Adafruit seesaw Library_ID1890	- ... install 1890
 
-lib_deps_external =
+lib_deps =
+    38
+    124
+    1890
